# Drzewo-Zycia

./: .gitignore  CMakeLists.txt  README.md  cameraThread.cpp  main.cpp
algorithm_wip/: CMakeLists.txt  main.cpp
camera_calibration/: CMakeLists.txt  main.cpp
cmake/: build_external_project.cmake  external_project.cmake.in  modern.cmake
gsteam_test/: CMakeLists.txt  main.cpp
live_video_test/: CMakeLists.txt  main.cpp
missions/: drzewo_zycia_v1.plan  drzewo_zycia_v2_short.plan  drzewo_zycia_v3_siata.plan  drzewo_zycia_v4_one_position.plan
photo_test/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/camera_calibration/: CMakeLists.txt  main.cpp
src/camera_thread/: CMakeLists.txt  cameraThread.cpp
src/gsteam_test/: CMakeLists.txt  main.cpp
src/live_video_test/: CMakeLists.txt  main.cpp
src/photo_test/: CMakeLists.txt  main.cpp
